BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Call2_Expense_vod__c.object
<CustomObject>
    <description>This object stores all expense data recorded on an interaction.</description>
    <fields>
        <fullName>Account_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The person account associated with the call expense.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Call2_Expense_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Amount_vod__c</fullName>
        <description>The amount of the expense associated with a single person.</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Attendee_Type_vod__c</fullName>
        <description>The type of attendee. Default values are: Contact, Event, Group Account, Person account and User</description>
        <label>Attendee Type</label>
        <picklist>
            <picklistValues>
                <fullName>Contact_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group_Account_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Person_Account_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call2_vod__c</fullName>
        <description>The call that this expense was reported.</description>
        <label>Call</label>
        <referenceTo>Call2_vod__c</referenceTo>
        <relationshipName>Call2_Expense_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Call_Date_vod__c</fullName>
        <description>The date of the call it was recorded for.</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contact associated with this expense.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Call2_Expense_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entity_Reference_Id_vod__c</fullName>
        <description>ID of object associated with the expense such as an account.</description>
        <label>Entity Reference Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Parent_Call_vod__c</fullName>
        <description>Formula Field to determine if the Call Expense record is part of the Parent Call or of an Attendee Call record.  1 indicates that the record is associated with the Parent Call.  0 indicates that it is associated with an Attendee Call.</description>
        <formula>IF(LEN(Call2_vod__r.Parent_Call_vod__c )&gt;0, 0,1)</formula>
        <label>Is Parent Call?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field used for mobile integration.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Note_vod__c</fullName>
        <description>Free text note for this expense line.</description>
        <label>Note</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Helper field for data loads.</description>
        <label>Override Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_vod__c</fullName>
        <description>Picklist containing the type of the expense. To edit expense types, edit the picklist values.</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Meals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Costs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user associated with the call expense.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Call2_Expense_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Interaction Expense</label>
    <nameField>
        <displayFormat>IE{000000000}</displayFormat>
        <label>Interaction Expense Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interaction Expenses</pluralLabel>
    <recordTypes>
        <fullName>BMS_EMEA_Sales_Standard_Rep_Presentation</fullName>
        <active>true</active>
        <label>BMS - EMEA Sales Standard Rep Presentation</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>